--- a/index.html
+++ b/index.html
@@ -235,8 +235,10 @@
         .socials {
             display: flex;
             justify-content: center;
+            align-items: center;
             gap: 24px;
             margin-top: 24px;
+            width: 100%;
         }
 
         .socials a {
@@ -288,7 +290,7 @@
             background: rgba(255, 255, 255, 0.08);
             backdrop-filter: blur(20px);
             border-radius: 24px;
-            padding: 32px;
+            padding: 20px;
             display: flex;
             flex-direction: column;
             justify-content: flex-start;
@@ -301,14 +303,14 @@
         .ui-wrapper::before {
             content: '';
             position: absolute;
-            top: -1px;
-            left: -1px;
-            right: -1px;
-            bottom: -1px;
+            top: -2px;
+            left: -2px;
+            right: -2px;
+            bottom: -2px;
             background: linear-gradient(45deg, #00ff88, #00a1ff, #ff008c, #00ff88);
             background-size: 400% 400%;
             z-index: -1;
-            border-radius: 25px;
+            border-radius: 26px;
             animation: gradient 15s ease infinite;
             opacity: 0.3;
         }
@@ -357,7 +359,10 @@
         .avatar-container {
             display: flex;
             justify-content: center;
+            align-items: center;
             margin-bottom: 24px;
+            width: 100%;
+            flex-direction: column;
         }
 
         .avatar-container img {
@@ -385,15 +390,23 @@
             text-align: center;
         }
 
+        #info {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100%;
+            width: 100%;
+        }
+
         @media (max-width: 768px) {
             .ui-wrapper {
-                width: 90vw;
-                height: auto;
+                width: 95vw;
+                height: 80vh;
                 min-height: 400px;
                 padding: 15px;
                 margin: 10px auto;
                 border-radius: 16px;
-                max-height: 80vh;
             }
 
             .ui-content {
@@ -453,10 +466,9 @@
 
         @media (max-width: 480px) {
             .ui-wrapper {
-                width: 85vw;
-                height: auto;
+                width: 92vw;
+                height: 75vh;
                 min-height: 300px;
-                max-height: 70vh;
                 margin: 10px auto;
                 padding: 10px;
                 border-radius: 12px;
@@ -590,7 +602,7 @@
                     <div class="avatar-container">
                         <img src="profile.jpg" alt="Profile">
                     </div>
-                    <p class="info-text">Милый кабанчик</p>
+                    <p class="info-text">Kaban4ik Studios</p>
                     <div class="socials">
                         <a href="https://steamcommunity.com/profiles/76561199509549266/" target="_blank" title="Steam"><i class="fab fa-steam"></i></a>
                         <a href="https://www.youtube.com/@Kaban4ikStudios" target="_blank" title="YouTube"><i class="fab fa-youtube"></i></a>
