--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <title>Portfolio Site</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <style>
         @font-face {
             font-family: 'Benzin';
@@ -48,7 +49,7 @@
                 transform: translateY(0px);
             }
             50% {
-                transform: translateY(-10px);
+                transform: translateY(-16px) scale(1.07);
             }
             100% {
                 transform: translateY(0px);
@@ -60,10 +61,21 @@
                 transform: scale(1);
             }
             50% {
-                transform: scale(1.05);
+                transform: scale(1.08);
             }
             100% {
                 transform: scale(1);
+            }
+        }
+
+        @keyframes fadeInUp {
+            0% {
+                opacity: 0;
+                transform: translateY(40px);
+            }
+            100% {
+                opacity: 1;
+                transform: translateY(0);
             }
         }
 
@@ -85,7 +97,7 @@
 
         #entry-screen span {
             animation: pulse 2s infinite ease-in-out;
-            text-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+            /* text-shadow: 0 0 10px rgba(255, 255, 255, 0.5); */
         }
 
         #background-video {
@@ -164,6 +176,7 @@
             letter-spacing: 0.5px;
             position: relative;
             overflow: hidden;
+            box-shadow: 0 0 0 0 #00ff88;
         }
 
         .menu-btn i {
@@ -172,8 +185,9 @@
         }
 
         .menu-btn:hover {
-            background: rgba(255, 255, 255, 0.1);
-            border-color: rgba(255, 255, 255, 0.2);
+            background: rgba(255, 255, 255, 0.15);
+            border-color: rgba(255, 255, 255, 0.3);
+            box-shadow: 0 0 16px 2px #00ff88, 0 4px 15px rgba(0,0,0,0.2);
             transform: translateY(-2px);
         }
 
@@ -184,7 +198,7 @@
         .menu-btn.active {
             background: rgba(255, 255, 255, 0.15);
             border-color: rgba(255, 255, 255, 0.3);
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 0 16px 2px #00ff88, 0 4px 15px rgba(0,0,0,0.2);
         }
 
         .menu-btn::after {
@@ -244,8 +258,9 @@
         .socials a {
             font-size: 1.4rem;
             text-decoration: none;
-            opacity: 0.8;
-            transition: all 0.3s ease;
+            opacity: 0;
+            animation: fadeInUp 1.2s cubic-bezier(0.4,0,0.2,1) forwards;
+            animation-delay: 0.5s;
             padding: 10px;
             border-radius: 50%;
             background: rgba(255, 255, 255, 0.1);
@@ -262,7 +277,7 @@
             transform: translateY(-3px);
             opacity: 1;
             background: rgba(255, 255, 255, 0.2);
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+            box-shadow: 0 0 18px 4px #00ff88, 0 5px 15px rgba(0,0,0,0.3);
         }
 
         .socials a::before {
@@ -282,6 +297,15 @@
             transform: rotate(45deg) translate(50%, 50%);
         }
 
+        .socials a i {
+            transition: color 0.3s, transform 0.3s;
+        }
+
+        .socials a:hover i {
+            color: #00ff88;
+            transform: scale(1.25) rotate(-8deg);
+        }
+
         .ui-wrapper {
             width: 90vmin;
             height: 90vmin;
@@ -298,6 +322,7 @@
             overflow: hidden;
             position: relative;
             z-index: 1;
+            height: 100%;
         }
 
         .ui-wrapper::before {
@@ -307,12 +332,13 @@
             left: -2px;
             right: -2px;
             bottom: -2px;
-            background: linear-gradient(45deg, #00ff88, #00a1ff, #ff008c, #00ff88);
-            background-size: 400% 400%;
+            background: linear-gradient(135deg, #00ff88, #00c97b);
+            background-size: 600% 600%;
             z-index: -1;
             border-radius: 26px;
-            animation: gradient 15s ease infinite;
-            opacity: 0.3;
+            animation: gradient 7s linear infinite;
+            opacity: 0.5;
+            filter: blur(1.5px) brightness(1.2);
         }
 
         .ui-content {
@@ -322,6 +348,9 @@
             background: rgba(0, 0, 0, 0.7);
             border-radius: 20px;
             padding: 20px;
+            position: relative;
+            overflow: hidden;
+            height: 100%;
         }
 
         #section-title {
@@ -334,26 +363,31 @@
 
         .section {
             opacity: 0;
-            transform: translateX(30px);
-            transition: all 0.6s cubic-bezier(0.4, 0, 0.2, 1);
-            position: absolute;
+            transform: translateY(40px);
+            transition: none;
+            animation: fadeInUp 0.8s cubic-bezier(0.4,0,0.2,1) forwards;
             width: 100%;
-            height: 100%;
-            left: 0;
-            top: 0;
             pointer-events: none;
             padding-right: 12px;
+            display: none;
         }
 
         .section.active {
             opacity: 1;
-            transform: translateX(0);
+            transform: translateY(0);
             pointer-events: all;
+            animation: fadeInUp 0.8s cubic-bezier(0.4,0,0.2,1) forwards;
+            display: block;
+            height: 100%;
         }
 
-        .ui-content {
-            position: relative;
-            overflow: hidden;
+        #info {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100%;
+            width: 100%;
         }
 
         .avatar-container {
@@ -373,12 +407,14 @@
             padding: 6px;
             object-fit: cover;
             border: 2px solid rgba(255, 255, 255, 0.2);
-            transition: all 0.3s ease;
+            transition: all 0.3s cubic-bezier(0.4,0,0.2,1), box-shadow 0.4s;
             animation: float 6s ease-in-out infinite;
+            box-shadow: 0 0 0 0 #00ff88;
         }
 
         .avatar-container img:hover {
-            transform: scale(1.1) rotate(5deg);
+            transform: scale(1.13) rotate(7deg);
+            box-shadow: 0 0 32px 4px #00ff88, 0 0 8px 2px #fff;
         }
 
         .info-text {
@@ -388,15 +424,6 @@
             max-width: 600px;
             opacity: 0.9;
             text-align: center;
-        }
-
-        #info {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100%;
-            width: 100%;
         }
 
         @media (max-width: 768px) {
@@ -479,28 +506,28 @@
             }
 
             .avatar-container {
-                margin-bottom: 12px;
+                margin-bottom: 18px;
             }
 
             .avatar-container img {
-                width: 60px;
-                height: 60px;
+                width: 100px;
+                height: 100px;
             }
 
             .info-text {
-                font-size: 0.9rem;
-                margin: 8px 0;
+                font-size: 1.2rem;
+                margin: 12px 0;
             }
 
             .socials {
-                gap: 12px;
-                margin-top: 12px;
+                gap: 20px;
+                margin-top: 18px;
             }
 
             .socials a {
-                width: 32px;
-                height: 32px;
-                font-size: 1rem;
+                width: 44px;
+                height: 44px;
+                font-size: 1.5rem;
             }
 
             .top-bar {
@@ -635,6 +662,7 @@
             const menuButtons = document.querySelectorAll('.menu-btn');
             const video = document.getElementById('background-video');
             let isMuted = true;
+            video.volume = 0.2;
 
             // Handle both click and touch events
             const handleEntry = () => {
@@ -689,12 +717,17 @@
                     if (currentActive !== nextSection) {
                         currentActive.style.transform = 'translateX(-30px)';
                         currentActive.style.opacity = '0';
-                        
                         setTimeout(() => {
                             currentActive.classList.remove('active');
+                            currentActive.style.display = 'none';
                             nextSection.classList.add('active');
                             nextSection.style.transform = 'translateX(0)';
                             nextSection.style.opacity = '1';
+                            if (nextSection.id === 'info') {
+                                nextSection.style.display = 'flex';
+                            } else {
+                                nextSection.style.display = 'block';
+                            }
                         }, 300);
                     }
                 };
@@ -711,10 +744,12 @@
                     video.muted = false;
                     video.style.filter = 'none';
                     soundToggle.innerHTML = '<i class="fas fa-volume-up"></i>';
+                    video.play();
                 } else {
                     video.muted = true;
                     video.style.filter = 'grayscale(100%) brightness(0.7) hue-rotate(200deg)';
                     soundToggle.innerHTML = '<i class="fas fa-volume-mute"></i>';
+                    video.pause();
                 }
                 isMuted = !isMuted;
             };
